<?xml version="1.0"?>
<package format="2">
  <name>turtle_lawnmower</name>
  <version>0.0.0</version>
  <description>The turtle_lawnmower package</description>

  <maintainer email="emilia.szymanska.eka@gmail.com">emilia</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <export>
  </export>
</package>
